@@ -12,49 +12,37 @@ import java.io.ByteArrayOutputStream;
 import java.io.File;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
-import java.security.*;
+import java.security.KeyFactory;
+import java.security.PublicKey;
+import java.security.SecureRandom;
+import java.security.Signature;
 import java.security.spec.RSAPublicKeySpec;
-import java.math.BigInteger;
 import java.util.Arrays;
-import java.util.HexFormat;
+import java.util.Base64;
 import java.util.List;
 
 public class CardHelper {
-
-    public static final byte[] AID = {(byte) 0x11, 0x22, 0x33, 0x44, 0x55, 0x00};
-
+    public static final byte[] AID = {(byte) 0x00, 0x00, 0x00, 0x00, 0x00, 0x01};
     public static final byte INS_INITIATE_KEY = (byte) 0x00;
+    public static final byte INS_WRITE_USERNAME = (byte) 0x01;
+    public static final byte INS_WRITE_ADDRESS = (byte) 0x02;
+    public static final byte INS_WRITE_PHONE = (byte) 0x03;
+    public static final byte INS_WRITE_CARD_ID = (byte) 0x04;
+    public static final byte INS_SET_PINS = (byte) 0x05;
     public static final byte INS_WRITE_AVATAR = (byte) 0x07;
-    public static final byte INS_SET_PINS     = (byte) 0x08;
-
-    public static final byte INS_CLEAR_DATA      = (byte) 0x10;
+    public static final byte INS_CLEAR_DATA = (byte) 0x10;
     public static final byte INS_UPDATE_USER_PIN = (byte) 0x20;
+    public static final byte INS_READ_ALL_DATA = (byte) 0x55;
+    public static final byte INS_READ_AVATAR = (byte) 0x54;
+    public static final byte INS_READ_CARD_ID = (byte) 0x53;
+    public static final byte INS_VERIFY_CARD = (byte) 0x61;
 
-    private static final byte INS_WRITE_USERNAME_ENC = (byte) 0x11;
-    private static final byte INS_WRITE_ADDRESS_ENC  = (byte) 0x12;
-    private static final byte INS_WRITE_PHONE_ENC    = (byte) 0x13;
-    private static final byte INS_WRITE_CARD_ID_ENC  = (byte) 0x14;
 
-    private static final byte INS_READ_USERNAME_DEC = (byte) 0x21;
-    private static final byte INS_READ_ADDRESS_DEC  = (byte) 0x22;
-    private static final byte INS_READ_PHONE_DEC    = (byte) 0x23;
-    private static final byte INS_READ_CARD_ID_DEC  = (byte) 0x24;
+    public static final String SUCCESS_RESPONSE = "9000";
 
-    // Card authentication
-    private static final byte INS_SIGN_CHALLENGE = (byte) 0x30;
-
-    private static final byte PIN_TYPE_USER  = (byte) 0x00;
-    private static final byte PIN_TYPE_ADMIN = (byte) 0x01;
-
-    public static final int SUCCESS_SW = 0x9000;
     private static final SecureRandom random = new SecureRandom();
+    public static final int SUCCESS_SW = 0x9000;
 
-    // IMPORTANT: cache public key of the last generated keypair (so initiateCard can authenticate later)
-    private static String LAST_PUBLIC_KEY_HEX = null;
-
-    // ============================================================
-    // CONNECT / SELECT
-    // ============================================================
 
     public static CardChannel connect() throws CardException {
         TerminalFactory factory = TerminalFactory.getDefault();
@@ -64,14 +52,17 @@ public class CardHelper {
         for (CardTerminal terminal : terminals) {
             System.out.println(" - " + terminal.getName());
         }
-        if (terminals.isEmpty()) throw new CardException("No card terminals found");
 
-        CardTerminal terminal = terminals.get(0);
+        CardTerminal terminal = terminals.getFirst();
         terminal.waitForCardPresent(0);
 
-        Card card = terminal.connect("*");
+        Card card = terminal.connect("T=0");
         CardChannel channel = card.getBasicChannel();
-        if (channel == null) throw new CardException("Basic channel is null");
+
+        if (channel == null) {
+            throw new RuntimeException();
+        }
+
         return channel;
     }
 
@@ -79,294 +70,523 @@ public class CardHelper {
         return new CommandAPDU(0x00, 0xA4, 0x04, 0x00, aid);
     }
 
-    private static void selectOrThrow(CardChannel channel) throws CardException {
-        ResponseAPDU resp = channel.transmit(selectAID(AID));
-        if (resp.getSW() != SUCCESS_SW) {
-            throw new CardException("Unable to select applet. SW=0x" + Integer.toHexString(resp.getSW()));
-        }
-    }
 
-    // ============================================================
-    // STEP 1: INITIATE KEY + CARD ID (NO AUTH HERE!)
-    // ============================================================
-
-    /**
-     * Chỉ làm: SELECT -> INITIATE_KEY -> cache public key -> return [publicKeyHex, cardId]
-     * KHÔNG gọi SIGN_CHALLENGE ở đây (vì sau CLEAR thì PIN chưa set => 6982).
-     */
-    public static String[] initiateKeyAndCardId() {
-        try {
-            String cardId = generate16Digits();
-
-            CardChannel channel = connect();
-            selectOrThrow(channel);
-
-            String publicKeyHex = initiateKey(channel);
-            LAST_PUBLIC_KEY_HEX = publicKeyHex; // cache for later auth in initiateCard()
-
-            return new String[]{publicKeyHex, cardId};
-        } catch (Exception e) {
-            System.out.println("initiateKeyAndCardId error: " + e.getMessage());
-            return null;
-        }
-    }
-
-    private static String initiateKey(CardChannel channel) throws CardException {
-        // Le 256 to avoid 6C83 round-trip
-        CommandAPDU generateKey = new CommandAPDU(0x00, INS_INITIATE_KEY, 0x00, 0x00, 256);
-        ResponseAPDU r = channel.transmit(generateKey);
-
-        if (r.getSW() != SUCCESS_SW) {
-            throw new CardException("INITIATE_KEY failed. SW=0x" + Integer.toHexString(r.getSW()));
-        }
-
-        byte[] publicKeyData = r.getData();
-        String publicKeyHex = HexFormat.of().formatHex(publicKeyData);
-        System.out.println("Public Key(hex): " + publicKeyHex);
-        return publicKeyHex;
-    }
-
-    // ============================================================
-    // STEP 2: WRITE CARD DATA + AUTH AFTER SET_PINS
-    // ============================================================
-
-    public static Boolean initiateCard(String username, String address, String phone,
-                                       String userPIN, String adminPIN, File avatar, String cardId) {
+    public static Boolean initiateCard(String username, String address, String phone, String userPIN, String adminPIN, File avatar, String cardId) {
         try {
             CardChannel channel = connect();
-            selectOrThrow(channel);
-
-            byte[] userPin6  = pinTo6Bytes(userPIN);
-            byte[] adminPin6 = pinTo6Bytes(adminPIN);
-
-            // 1) SET_PINS first (so SIGN_CHALLENGE can verify admin PIN)
-            byte[] setPINData = new byte[12];
-            System.arraycopy(userPin6, 0, setPINData, 0, 6);
-            System.arraycopy(adminPin6, 0, setPINData, 6, 6);
-            sendOnce(channel, INS_SET_PINS, (byte)0x00, (byte)0x00, setPINData);
-
-            // 2) AUTHENTICATE CARD (Cách 1) AFTER SET_PINS
-            if (LAST_PUBLIC_KEY_HEX == null) {
-                throw new CardException("Missing cached public key. Call initiateKeyAndCardId() first.");
-            }
-            boolean authOk = authenticateCard(channel, LAST_PUBLIC_KEY_HEX, adminPin6);
-            if (!authOk) {
-                throw new CardException("Card authentication verify = false");
+            CommandAPDU select = selectAID(AID);
+            ResponseAPDU resp = channel.transmit(select);
+            if (!Integer.toHexString(resp.getSW()).equals(SUCCESS_RESPONSE)) {
+                throw new RuntimeException("unable to select the applet");
             }
 
-            // 3) WRITE encrypted fields
-            sendEncryptedData(channel, INS_WRITE_USERNAME_ENC, userPin6, PIN_TYPE_USER, username.getBytes(StandardCharsets.UTF_8));
-            sendEncryptedData(channel, INS_WRITE_ADDRESS_ENC,  userPin6, PIN_TYPE_USER, address.getBytes(StandardCharsets.UTF_8));
-            sendEncryptedData(channel, INS_WRITE_PHONE_ENC,    userPin6, PIN_TYPE_USER, phone.getBytes(StandardCharsets.UTF_8));
-            sendEncryptedData(channel, INS_WRITE_CARD_ID_ENC,  userPin6, PIN_TYPE_USER, cardId.getBytes(StandardCharsets.UTF_8));
+            byte[] usernameData = username.getBytes(StandardCharsets.UTF_8);
+            byte[] addressData = address.getBytes(StandardCharsets.UTF_8);
+            byte[] phoneData = phone.getBytes(StandardCharsets.UTF_8);
+            byte[] cardIdData = cardId.getBytes(StandardCharsets.UTF_8);
+            byte[] userPINData = userPIN.getBytes(StandardCharsets.UTF_8);
+            byte[] adminPINData = adminPIN.getBytes(StandardCharsets.UTF_8);
+            byte[] setPINData = new byte[userPINData.length + adminPINData.length];
+            System.arraycopy(userPINData, 0, setPINData, 0, userPINData.length);
+            System.arraycopy(adminPINData, 0, setPINData, userPINData.length, adminPINData.length);
 
-            // 4) Avatar
-            if (avatar != null) {
-                BufferedImage original = ImageIO.read(avatar);
-                if (original == null) throw new IOException("Cannot read image: " + avatar.getAbsolutePath());
+            BufferedImage original = ImageIO.read(avatar);
+            BufferedImage resized = resize(original, 200, 200);
+            byte[] avatarData = compressImage(resized, 0.6f);
+            System.out.println("Avatar length: " + avatarData.length + " bytes");
 
-                BufferedImage resized = resize(original, 200, 200);
-                byte[] avatarData = compressImage(resized, 0.6f);
+            sendData(channel, INS_SET_PINS, setPINData);
 
-                System.out.println("Avatar length: " + avatarData.length + " bytes");
-                sendAvatar(channel, avatarData);
-            }
+            sendData(channel, INS_WRITE_USERNAME,
+                    withUserPin(userPINData, usernameData));
 
+            sendData(channel, INS_WRITE_ADDRESS,
+                    withUserPin(userPINData, addressData));
+
+            sendData(channel, INS_WRITE_PHONE,
+                    withUserPin(userPINData, phoneData));
+
+            sendData(channel, INS_WRITE_CARD_ID, cardIdData);
+
+            //sendEncryptedData(channel, INS_WRITE_USERNAME_ENC, userPINData, PIN_TYPE_USER, usernameData);
+            sendAvatarData(channel, INS_WRITE_AVATAR, userPINData, avatarData);
             return true;
         } catch (Exception e) {
-            System.out.println("initiateCard error: " + e.getMessage());
+            System.out.println(e.getMessage());
             return false;
         }
     }
 
-    // ============================================================
-    // AUTH helpers
-    // ============================================================
+    private static byte[] withUserPin(byte[] userPin, byte[] data) {
+        byte[] out = new byte[userPin.length + data.length];
+        System.arraycopy(userPin, 0, out, 0, userPin.length);
+        System.arraycopy(data, 0, out, userPin.length, data.length);
+        return out;
+    }
 
-    private static boolean authenticateCard(CardChannel channel, String publicKeyHex, byte[] adminPin6) throws Exception {
-        PublicKey rsaPub = parseRsa1024PubFromHex(publicKeyHex);
 
-        byte[] challenge = new byte[32];
-        random.nextBytes(challenge);
-
-        byte[] payload = new byte[6 + challenge.length];
-        System.arraycopy(adminPin6, 0, payload, 0, 6);
-        System.arraycopy(challenge, 0, payload, 6, challenge.length);
-
-        CommandAPDU apdu = new CommandAPDU(0x00, INS_SIGN_CHALLENGE, 0x00, 0x00, payload, 256);
-        ResponseAPDU resp = channel.transmit(apdu);
-        if (resp.getSW() != SUCCESS_SW) {
-            throw new CardException("SIGN_CHALLENGE failed. SW=0x" + Integer.toHexString(resp.getSW()));
+    public static String[] initiateKeyAndCardId() {
+        try {
+            String cardId = generate16Digits();
+            CardChannel channel = connect();
+            CommandAPDU select = selectAID(AID);
+            ResponseAPDU resp = channel.transmit(select);
+            if (!Integer.toHexString(resp.getSW()).equals(SUCCESS_RESPONSE)) {
+                throw new RuntimeException("unable to select the applet");
+            }
+            String publicKey = initiateKey(channel);
+            return new String[]{publicKey, cardId};
+        } catch (Exception e) {
+            System.out.println(e.getMessage());
+            return null;
         }
-
-        byte[] sig = resp.getData();
-
-        Signature verifier = Signature.getInstance("SHA1withRSA");
-        verifier.initVerify(rsaPub);
-        verifier.update(challenge);
-
-        boolean ok = verifier.verify(sig);
-        System.out.println("Authenticate card verified = " + ok);
-        return ok;
     }
-
-    private static PublicKey parseRsa1024PubFromHex(String publicKeyHex) throws Exception {
-        byte[] pub = HexFormat.of().parseHex(publicKeyHex);
-        if (pub.length < 129) throw new IllegalArgumentException("Public key data too short: " + pub.length);
-
-        byte[] mod = Arrays.copyOfRange(pub, 0, 128);
-        byte[] exp = Arrays.copyOfRange(pub, 128, pub.length);
-
-        BigInteger n = new BigInteger(1, mod);
-        BigInteger e = new BigInteger(1, exp);
-
-        return KeyFactory.getInstance("RSA").generatePublic(new RSAPublicKeySpec(n, e));
-    }
-
-    // ============================================================
-    // CLEAR / CHANGE PIN
-    // ============================================================
 
     public static boolean clearCardData() {
         try {
             CardChannel channel = connect();
-            selectOrThrow(channel);
+            CommandAPDU select = selectAID(AID);
+            ResponseAPDU resp = channel.transmit(select);
+            if (!Integer.toHexString(resp.getSW()).equals(SUCCESS_RESPONSE)) {
+                throw new RuntimeException("unable to select the applet");
+            }
 
-            CommandAPDU clearData = new CommandAPDU(0x00, INS_CLEAR_DATA, 0x00, 0x00);
+            CommandAPDU clearData = new CommandAPDU(0x00, INS_CLEAR_DATA, 0x00, 0x00, 0);
             ResponseAPDU r = channel.transmit(clearData);
-            System.out.println("CLEAR SW = 0x" + Integer.toHexString(r.getSW()));
-            return r.getSW() == SUCCESS_SW;
-        } catch (CardException e) {
-            e.printStackTrace();
+
+            return r.getSW() == 0x9000;
+        } catch (Exception e) {
             return false;
         }
     }
 
     public static boolean changeUserPin(String currentPin, String newPin) {
+        if (currentPin.length() != 6 || newPin.length() != 6 || !currentPin.matches("\\d{6}") || !newPin.matches("\\d{6}")) {
+            return false;
+        }
         try {
-            byte[] cur = pinTo6Bytes(currentPin);
-            byte[] nxt = pinTo6Bytes(newPin);
-
             CardChannel channel = connect();
-            selectOrThrow(channel);
+            CommandAPDU select = selectAID(AID);
+            ResponseAPDU resp = channel.transmit(select);
+            if (resp.getSW() != SUCCESS_SW) {
+                throw new RuntimeException("unable to select the applet");
+            }
+            var data = setPinDataWithTimestamp(currentPin, newPin);
+            CommandAPDU cmd = new CommandAPDU(
+                    0x00,
+                    INS_UPDATE_USER_PIN,
+                    0x00, 0x00,
+                    data
+            );
 
-            byte[] payload = new byte[12];
-            System.arraycopy(cur, 0, payload, 0, 6);
-            System.arraycopy(nxt, 0, payload, 6, 6);
+            ResponseAPDU result = channel.transmit(cmd);
+            return result.getSW() == SUCCESS_SW;
 
-            ResponseAPDU r = sendOnce(channel, INS_UPDATE_USER_PIN, (byte)0x00, (byte)0x00, payload);
-            return r.getSW() == SUCCESS_SW;
         } catch (Exception e) {
             e.printStackTrace();
             return false;
         }
     }
 
-    // ============================================================
-    // ENCRYPTED WRITE / READ
-    // ============================================================
+    private static String initiateKey(CardChannel channel) throws CardException {
+        CommandAPDU generateKey = new CommandAPDU(0x00, INS_INITIATE_KEY, 0x00, 0x00);
+        ResponseAPDU r = channel.transmit(generateKey);
 
-    private static void sendEncryptedData(CardChannel channel, byte ins, byte[] pin6,
-                                          byte pinType, byte[] data) throws CardException {
-        if (pin6.length != 6) throw new IllegalArgumentException("PIN must be 6 bytes");
-
-        byte[] payload = new byte[6 + data.length];
-        System.arraycopy(pin6, 0, payload, 0, 6);
-        System.arraycopy(data, 0, payload, 6, data.length);
-
-        CommandAPDU apdu = new CommandAPDU(0x00, ins, pinType, 0x00, payload);
-        ResponseAPDU resp = channel.transmit(apdu);
-
-        if (resp.getSW() != SUCCESS_SW) {
-            throw new CardException("Error writing encrypted data. INS=0x" + Integer.toHexString(ins & 0xFF)
-                    + " SW=0x" + Integer.toHexString(resp.getSW()));
+        if (r.getSW() != SUCCESS_SW) {
+            throw new CardException(
+                    String.format("Failed to generate key: 0x%04X", r.getSW())
+            );
         }
-    }
 
-    public static byte[] readEncryptedData(CardChannel channel, byte ins, byte[] pin6, byte pinType) throws CardException {
-        if (pin6.length != 6) throw new IllegalArgumentException("PIN must be 6 bytes");
+        byte[] publicKeyData = r.getData();
 
-        CommandAPDU apdu = new CommandAPDU(0x00, ins, pinType, 0x00, pin6, 256);
-        ResponseAPDU resp = channel.transmit(apdu);
-
-        if (resp.getSW() != SUCCESS_SW) {
-            throw new CardException("Error reading decrypted data. INS=0x" + Integer.toHexString(ins & 0xFF)
-                    + " SW=0x" + Integer.toHexString(resp.getSW()));
+        if (publicKeyData.length == 0) {
+            throw new CardException("Empty public key data");
         }
-        return resp.getData();
+
+        validatePublicKeyFormat(publicKeyData);
+
+        // Convert to Base64 để lưu vào database
+
+        return Base64.getEncoder().encodeToString(publicKeyData);
     }
 
-    private static String readDecryptedString(
-            CardChannel channel,
-            byte ins,
-            byte pinType,
-            byte[] pin6
-    ) throws Exception {
+    private static void validatePublicKeyFormat(byte[] data) throws CardException {
+        if (data.length < 4) {
+            throw new CardException("Invalid public key data: too short");
+        }
 
-        byte[] data = readEncryptedData(channel, ins, pin6, pinType);
-        return new String(data, StandardCharsets.UTF_8).trim();
+        int offset = 0;
+
+        // Check modulus length
+        int modulusLen = ((data[offset] & 0xFF) << 8) | (data[offset + 1] & 0xFF);
+        offset += 2;
+
+        if (offset + modulusLen > data.length) {
+            throw new CardException("Invalid modulus length");
+        }
+        offset += modulusLen;
+
+        // Check exponent length
+        if (offset + 2 > data.length) {
+            throw new CardException("Missing exponent length");
+        }
+
+        int expLen = ((data[offset] & 0xFF) << 8) | (data[offset + 1] & 0xFF);
+        offset += 2;
+
+        if (offset + expLen != data.length) {
+            throw new CardException("Invalid exponent length");
+        }
+
+        System.out.println("✓ Public key format valid: modulus=" + modulusLen + " bytes, exponent=" + expLen + " bytes");
+    }
+
+    private static String generate16Digits() {
+        StringBuilder sb = new StringBuilder(16);
+
+        sb.append(random.nextInt(9) + 1);
+
+        for (int i = 1; i < 16; i++) {
+            sb.append(random.nextInt(10));
+        }
+
+        return sb.toString();
+    }
+
+    private static byte[] setPinDataWithTimestamp(String currentPin, String newPin) {
+        long currentTimestamp = System.currentTimeMillis() / 1000;
+        System.out.println("current: " + currentTimestamp);
+
+        byte[] timestampBytes = new byte[4];
+        timestampBytes[0] = (byte) ((currentTimestamp >> 24) & 0xFF);
+        timestampBytes[1] = (byte) ((currentTimestamp >> 16) & 0xFF);
+        timestampBytes[2] = (byte) ((currentTimestamp >> 8) & 0xFF);
+        timestampBytes[3] = (byte) (currentTimestamp & 0xFF);
+
+        byte[] data = new byte[16];
+        System.arraycopy(currentPin.getBytes(), 0, data, 0, 6);
+        System.arraycopy(newPin.getBytes(), 0, data, 6, 6);
+        System.arraycopy(timestampBytes, 0, data, 12, 4);
+        System.out.println("Data: " + Arrays.toString(data));
+        return data;
     }
 
 
-    // ============================================================
-    // AVATAR CHUNK WRITE
-    // ============================================================
-
-    private static void sendAvatar(CardChannel channel, byte[] data) throws CardException {
+    private static void sendData(CardChannel channel, byte ins, byte[] data) throws CardException {
         int chunkSize = 250;
         for (int offset = 0; offset < data.length; offset += chunkSize) {
             int len = Math.min(chunkSize, data.length - offset);
             byte[] chunk = Arrays.copyOfRange(data, offset, offset + len);
 
             CommandAPDU apdu = new CommandAPDU(
-                    0x00, INS_WRITE_AVATAR,
-                    (byte) ((offset >> 8) & 0xFF),
-                    (byte) (offset & 0xFF),
+                    0x00,
+                    ins,
+                    (byte) ((offset >> 8) & 0xFF), // P1 = high byte offset
+                    (byte) (offset & 0xFF), // P2 = low byte offset
                     chunk
             );
 
             ResponseAPDU resp = channel.transmit(apdu);
             if (resp.getSW() != SUCCESS_SW) {
-                throw new CardException("Error writing avatar. Offset=" + offset
-                        + " SW=0x" + Integer.toHexString(resp.getSW()));
+                throw new CardException("Error writing data to card: " + Integer.toHexString(resp.getSW()));
             }
         }
     }
 
-    // ============================================================
-    // LOW-LEVEL
-    // ============================================================
+    private static void sendAvatarData(
+            CardChannel channel,
+            byte ins,
+            byte[] userPINData,
+            byte[] avatarData
+    ) throws CardException {
 
-    private static ResponseAPDU sendOnce(CardChannel channel, byte ins, byte p1, byte p2, byte[] data) throws CardException {
-        CommandAPDU apdu = (data == null)
-                ? new CommandAPDU(0x00, ins, p1, p2)
-                : new CommandAPDU(0x00, ins, p1, p2, data);
+        final int MAX_APDU_DATA = 246;
+        final int PIN_LEN = userPINData.length;
+        final int AVATAR_CHUNK_SIZE = MAX_APDU_DATA - PIN_LEN;
 
-        ResponseAPDU resp = channel.transmit(apdu);
+        for (int offset = 0; offset < avatarData.length; offset += AVATAR_CHUNK_SIZE) {
+
+            int len = Math.min(AVATAR_CHUNK_SIZE, avatarData.length - offset);
+
+            byte[] payload = new byte[PIN_LEN + len];
+            System.arraycopy(userPINData, 0, payload, 0, PIN_LEN);
+            System.arraycopy(avatarData, offset, payload, PIN_LEN, len);
+
+            CommandAPDU apdu = new CommandAPDU(
+                    0x00,
+                    ins,
+                    (byte) ((offset >> 8) & 0xFF),
+                    (byte) (offset & 0xFF),
+                    payload
+            );
+
+            ResponseAPDU resp = channel.transmit(apdu);
+            if (resp.getSW() != SUCCESS_SW) {
+                throw new CardException(
+                        "Error writing avatar data: " + Integer.toHexString(resp.getSW())
+                );
+            }
+        }
+    }
+
+
+    public static void readData(String pin) throws Exception {
+        CardChannel channel = connect();
+        CommandAPDU select = selectAID(AID);
+        ResponseAPDU resp = channel.transmit(select);
+        if (!Integer.toHexString(resp.getSW()).equals(SUCCESS_RESPONSE)) {
+            throw new RuntimeException("unable to select the applet");
+        }
+        byte[] pinData = pin.getBytes(StandardCharsets.UTF_8);
+        readData(channel, INS_READ_ALL_DATA, pinData);
+    }
+
+    private static void readData(CardChannel channel, byte ins, byte[] pin) throws Exception {
+
+        ByteArrayOutputStream dataStream = new ByteArrayOutputStream();
+
+        // Lần đầu đọc với P1P2 = 0
+        short offset = 0;
+        byte[] command = new byte[11]; // CLA INS P1 P2 LC + 6 PIN
+        command[0] = (byte) 0x00; // CLA
+        command[1] = (byte) 0x55; // INS_READ_ALL_DATA
+        command[2] = (byte) (0); // P1
+        command[3] = (byte) (0); // P2
+        command[4] = (byte) 0x06; // LC = 6
+        System.arraycopy(pin, 0, command, 5, 6);
+
+        ResponseAPDU response = channel.transmit(new CommandAPDU(command));
+
+        if (response.getSW() != SUCCESS_SW) {
+            throw new CardException("Read failed: " + Integer.toHexString(response.getSW()));
+        }
+
+        byte[] data = response.getData();
+
+        // Parse header (10 bytes lengths)
+        int readOffset = 0;
+        short nameLen = (short) (((data[readOffset++] & 0xFF) << 8) | (data[readOffset++] & 0xFF));
+        short addressLen = (short) (((data[readOffset++] & 0xFF) << 8) | (data[readOffset++] & 0xFF));
+        short phoneLen = (short) (((data[readOffset++] & 0xFF) << 8) | (data[readOffset++] & 0xFF));
+        short cardIdLen = (short) (((data[readOffset++] & 0xFF) << 8) | (data[readOffset++] & 0xFF));
+
+
+        short totalDataLen = (short) (nameLen + addressLen + phoneLen + cardIdLen);
+
+        // Copy data sau header
+        dataStream.write(data, readOffset, data.length - readOffset);
+        offset = (short) (data.length - readOffset);
+
+        // Đọc tiếp nếu chưa đủ
+        while (offset < totalDataLen) {
+            command[2] = (byte) ((offset >> 8) & 0xFF); // Update P1
+            command[3] = (byte) (offset & 0xFF); // Update P2
+
+            response = channel.transmit(new CommandAPDU(command));
+
+            if (response.getSW() != SUCCESS_SW) {
+                throw new CardException("Read continuation failed: " + Integer.toHexString(response.getSW()));
+            }
+
+            data = response.getData();
+            dataStream.write(data, 0, data.length);
+            offset += (short) data.length;
+        }
+
+        // Parse data thành các fields
+        byte[] allData = dataStream.toByteArray();
+        int pos = 0;
+
+        byte[] name = new byte[nameLen];
+        System.arraycopy(allData, pos, name, 0, nameLen);
+        pos += nameLen;
+
+        byte[] address = new byte[addressLen];
+        System.arraycopy(allData, pos, address, 0, addressLen);
+        pos += addressLen;
+
+        byte[] phone = new byte[phoneLen];
+        System.arraycopy(allData, pos, phone, 0, phoneLen);
+        pos += phoneLen;
+
+        byte[] cardId = new byte[cardIdLen];
+        System.arraycopy(allData, pos, cardId, 0, cardIdLen);
+
+        System.out.println("Name: " + new String(name, StandardCharsets.UTF_8));
+        System.out.println("Address: " + new String(address, StandardCharsets.UTF_8));
+        System.out.println("Phone: " + new String(phone, StandardCharsets.UTF_8));
+        System.out.println("CardId: " + new String(cardId, StandardCharsets.UTF_8));
+
+        readAvatar(channel, pin, INS_READ_AVATAR);
+        readCardId();
+    }
+
+    public static byte[] readAvatar(CardChannel channel, byte[] pin, byte ins)
+            throws CardException {
+
+        ByteArrayOutputStream dataStream = new ByteArrayOutputStream();
+        int offset = 0;
+        boolean isLastChunk = false;
+
+        while (!isLastChunk) {
+            byte[] command = new byte[11];
+            command[0] = (byte) 0x00;
+            command[1] = ins;
+            command[2] = (byte) ((offset >> 8) & 0xFF);
+            command[3] = (byte) (offset & 0xFF);
+            command[4] = (byte) 0x06;
+            System.arraycopy(pin, 0, command, 5, 6);
+
+            ResponseAPDU response = channel.transmit(new CommandAPDU(command));
+
+            if (response.getSW() != SUCCESS_SW) {
+                throw new CardException(
+                        String.format("Read failed at offset %d: 0x%04X", offset, response.getSW())
+                );
+            }
+
+            byte[] responseData = response.getData();
+
+            if (responseData.length == 0) {
+                throw new CardException("Received empty response from card");
+            }
+
+            // Byte đầu tiên là flag
+            byte flag = responseData[0];
+            isLastChunk = (flag == 0x01);
+
+            // Data thực sự bắt đầu từ byte thứ 2
+            int dataLen = responseData.length - 1;
+            if (dataLen > 0) {
+                dataStream.write(responseData, 1, dataLen);
+                offset += dataLen;
+            }
+        }
+
+        System.out.println("Data length: " + dataStream.size());
+        return dataStream.toByteArray();
+    }
+
+    public static void readCardId() throws Exception {
+        CardChannel channel = connect();
+        CommandAPDU select = selectAID(AID);
+        ResponseAPDU resp = channel.transmit(select);
+        if (!Integer.toHexString(resp.getSW()).equals(SUCCESS_RESPONSE)) {
+            throw new RuntimeException("unable to select the applet");
+        }
+        CommandAPDU apdu = new CommandAPDU(
+                0x00,
+                INS_READ_CARD_ID,
+                0x00,
+                0x00
+        );
+
+        resp = channel.transmit(apdu);
         if (resp.getSW() != SUCCESS_SW) {
-            throw new CardException("APDU failed. INS=0x" + Integer.toHexString(ins & 0xFF)
-                    + " SW=0x" + Integer.toHexString(resp.getSW()));
+            throw new RuntimeException("unable to get card id");
         }
-        return resp;
+
+        byte[] cardIdData = resp.getData();
+        String cardId = new String(cardIdData, StandardCharsets.UTF_8);
+        System.out.println("CardId: " + cardId);
+        String publicKey = DatabaseHelper.getUserPublicKey(cardId);
+        System.out.println("Public key: " + publicKey);
+        boolean isVerified = verifyCard(publicKey);
+
     }
 
-    // ============================================================
-    // UTIL
-    // ============================================================
+    private static PublicKey parsePublicKey(byte[] pubKeyData) throws Exception {
+        int offset = 0;
 
-    private static byte[] pinTo6Bytes(String pin) {
-        if (pin == null || pin.length() != 6 || !pin.matches("\\d{6}")) {
-            throw new IllegalArgumentException("PIN must be exactly 6 digits");
-        }
-        return pin.getBytes(StandardCharsets.US_ASCII);
+        // Read modulus length
+        int modulusLen = ((pubKeyData[offset] & 0xFF) << 8) | (pubKeyData[offset + 1] & 0xFF);
+        offset += 2;
+
+        // Read modulus
+        byte[] modulus = Arrays.copyOfRange(pubKeyData, offset, offset + modulusLen);
+        offset += modulusLen;
+
+        // Read exponent length
+        int expLen = ((pubKeyData[offset] & 0xFF) << 8) | (pubKeyData[offset + 1] & 0xFF);
+        offset += 2;
+
+        // Read exponent
+        byte[] exponent = Arrays.copyOfRange(pubKeyData, offset, offset + expLen);
+
+        // Create RSA public key
+        RSAPublicKeySpec keySpec = new RSAPublicKeySpec(
+                new java.math.BigInteger(1, modulus),
+                new java.math.BigInteger(1, exponent)
+        );
+
+        KeyFactory keyFactory = KeyFactory.getInstance("RSA");
+        PublicKey publicKey = keyFactory.generatePublic(keySpec);
+
+        System.out.println("Public key reconstructed successfully");
+        return publicKey;
     }
 
-    private static String generate16Digits() {
-        StringBuilder sb = new StringBuilder(16);
-        sb.append(random.nextInt(9) + 1);
-        for (int i = 1; i < 16; i++) sb.append(random.nextInt(10));
+    public static boolean verifyCard( String publicKeyBase64) throws Exception {
+
+        CardChannel channel = connect();
+        CommandAPDU select = selectAID(AID);
+        ResponseAPDU resp = channel.transmit(select);
+        if (!Integer.toHexString(resp.getSW()).equals(SUCCESS_RESPONSE)) {
+            throw new RuntimeException("unable to select the applet");
+        }
+        byte[] pubKeyData = Base64.getDecoder().decode(publicKeyBase64);
+        PublicKey publicKey = parsePublicKey(pubKeyData);
+
+        // Generate 32-byte random challenge
+        SecureRandom random = new SecureRandom();
+        byte[] challenge = new byte[32];
+        random.nextBytes(challenge);
+
+        System.out.println("Challenge: " + bytesToHex(challenge));
+
+        // Send challenge to card
+        byte[] command = new byte[37];
+        command[0] = (byte) 0x00;
+        command[1] = INS_VERIFY_CARD;
+        command[2] = (byte) 0x00;
+        command[3] = (byte) 0x00;
+        command[4] = (byte) 0x20;  // 32 bytes
+        System.arraycopy(challenge, 0, command, 5, 32);
+
+        ResponseAPDU response = channel.transmit(new CommandAPDU(command));
+
+        if (response.getSW() != SUCCESS_SW) {
+            throw new CardException(
+                    String.format("Card verification failed: 0x%04X", response.getSW())
+            );
+        }
+
+        byte[] signature = response.getData();
+        System.out.println("Signature: " + bytesToHex(signature));
+
+        // Verify signature with public key
+        Signature verifier = Signature.getInstance("SHA1withRSA");
+        verifier.initVerify(publicKey);
+        verifier.update(challenge);
+
+        boolean isValid = verifier.verify(signature);
+
+        System.out.println("Signature valid: " + isValid);
+        return isValid;
+    }
+
+    /**
+     * Helper method to convert bytes to hex string
+     */
+    private static String bytesToHex(byte[] bytes) {
+        StringBuilder sb = new StringBuilder();
+        for (byte b : bytes) {
+            sb.append(String.format("%02X", b));
+        }
         return sb.toString();
     }
+
 
     private static byte[] compressImage(BufferedImage image, float quality) throws IOException {
         ByteArrayOutputStream baos = new ByteArrayOutputStream();
@@ -376,7 +596,7 @@ public class CardHelper {
 
         if (param.canWriteCompressed()) {
             param.setCompressionMode(ImageWriteParam.MODE_EXPLICIT);
-            param.setCompressionQuality(quality);
+            param.setCompressionQuality(quality); // 0.0f → thấp nhất, 1.0f → tốt nhất
         }
 
         writer.setOutput(new MemoryCacheImageOutputStream(baos));
@@ -393,58 +613,4 @@ public class CardHelper {
         g.dispose();
         return resizedImage;
     }
-
-
-    public static boolean adminUnlockAndVerifyCard(
-            String expectedCardId,
-            String publicKeyHexFromDb,
-            String adminPin
-    ) throws Exception {
-
-        CardChannel channel = connect();
-        selectOrThrow(channel);
-
-        byte[] pin6 = pinTo6Bytes(adminPin);
-
-        // 1️⃣ Đọc cardId từ thẻ (admin)
-        String cardIdOnCard = readDecryptedString(
-                channel,
-                INS_READ_CARD_ID_DEC,
-                PIN_TYPE_ADMIN,
-                pin6
-        );
-
-        if (!expectedCardId.trim().equals(cardIdOnCard)) {
-            throw new CardException("Sai thẻ: CardId không khớp");
-        }
-
-        // 2️⃣ RSA challenge-response
-        boolean verified = authenticateCard(
-                channel,
-                publicKeyHexFromDb, // 🔥 lấy từ DB
-                pin6
-        );
-
-        if (!verified) {
-            throw new CardException("Xác thực RSA thất bại");
-        }
-
-        return true;
-    }
-
-    public static com.luukien.javacard.model.CardProfile readProfileAsAdmin(String adminPin) throws Exception {
-        CardChannel ch = connect();
-        selectOrThrow(ch);
-
-        byte[] pin6 = pinTo6Bytes(adminPin);
-
-        String name    = readDecryptedString(ch, INS_READ_USERNAME_DEC, PIN_TYPE_ADMIN, pin6);
-        String phone   = readDecryptedString(ch, INS_READ_PHONE_DEC,   PIN_TYPE_ADMIN, pin6);
-        String address = readDecryptedString(ch, INS_READ_ADDRESS_DEC, PIN_TYPE_ADMIN, pin6);
-        String cardId  = readDecryptedString(ch, INS_READ_CARD_ID_DEC, PIN_TYPE_ADMIN, pin6);
-
-        return new com.luukien.javacard.model.CardProfile(cardId, name, phone, address);
-    }
-
-
 }
